--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -25,12 +25,12 @@ jobs:
           ./scripts/docker-neo4j-initializer/start-movies-db.sh
       - run: yarn install
       - name: Eslint check
-        run: yarn run lint
+        run: turbo run lint
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          build: yarn run build
-          start: yarn run dev
+          build: turbo run build --filter neodash-editor
+          start: turbo run start --filter neodash-editor
           wait-on: "http://localhost:3000"
           browser: chrome
   build-s3:
@@ -46,12 +46,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
-      - run: yarn run build-minimal
+      - run: turbo run build --filter neodash-editor
       - name: Set AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-1
-      - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
-      - run: aws s3 rm s3://neodash-test.graphapp.io/ --recursive && aws s3 sync dist s3://neodash-test.graphapp.io/ --acl public-read
+      - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > apps/neodash-editor/dist/index.html
+      - run: aws s3 rm s3://neodash-test.graphapp.io/ --recursive && aws s3 sync apps/neodash-editor/dist s3://neodash-test.graphapp.io/ --acl public-read
