--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -18,11 +18,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Creating Neo4j Container
         run: |
-          chmod +x ./scripts/docker-neo4j-initializer/docker-neo4j.sh
-          ./scripts/docker-neo4j-initializer/docker-neo4j.sh
+          chmod +x apps/neodash-editor/docker-files/docker-neo4j-initializer/docker-neo4j.sh
+          apps/neodash-editor/docker-files/docker-neo4j-initializer/docker-neo4j.sh
           sleep 30s
-          chmod +x ./scripts/docker-neo4j-initializer/start-movies-db.sh
-          ./scripts/docker-neo4j-initializer/start-movies-db.sh
+          chmod +x apps/neodash-editor/docker-files/docker-neo4j-initializer/start-movies-db.sh
+          apps/neodash-editor/docker-files/docker-neo4j-initializer/start-movies-db.sh
       - run: yarn install
       - name: Eslint check
         run: turbo run lint
