--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@sentry/webpack-plugin": "^2.5.0",
     "babel-runtime": "^6.26.0",
     "chroma-js": "^2.4.2",
-    "circular-dependency-plugin": "^5.2.2",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.7",
@@ -135,6 +134,7 @@
     "typescript": "^4.8.4",
     "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.7.3",
+    "circular-dependency-plugin": "^5.2.2"
   }
 }
