--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     strategy:
       matrix:
         node-version: [18.x]
@@ -35,7 +35,7 @@ jobs:
           browser: chrome
   build-s3:
     needs: build-test
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     strategy:
       matrix:
         node-version: [18.x]
@@ -58,7 +58,7 @@ jobs:
       - run: aws s3 rm s3://neodash.graphapp.io/ --recursive && aws s3 sync dist s3://neodash.graphapp.io/ --acl public-read
   build-docker:
     needs: build-test
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     strategy:
       matrix:
         node-version: [18.x]
@@ -82,7 +82,7 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_LABS_USERNAME }}/neodash:latest,${{ secrets.DOCKER_HUB_LABS_USERNAME }}/neodash:2.3.3
   build-docker-legacy:
     needs: build-test
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     strategy:
       matrix:
         node-version: [18.x]
@@ -105,7 +105,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:latest,${{ secrets.DOCKER_HUB_USERNAME }}/neodash:2.3.3
   deploy-gallery:
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     strategy:
       matrix:
         node-version: [18.x]
@@ -126,7 +126,7 @@ jobs:
       - run: aws s3 rm s3://neodash-gallery.graphapp.io/ --recursive && aws s3 sync gallery/build s3://neodash-gallery.graphapp.io/ --acl public-read
   deploy-docs:
     needs: build-test
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     steps:
       - name: Trigger Developer Event
         uses: peter-evans/repository-dispatch@main
@@ -136,7 +136,7 @@ jobs:
           event-type: labs
   build-npm:
     needs: build-test
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     strategy:
       matrix:
         node-version: [18.x]
