--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: neodash-runners
     strategy:
       matrix:
         node-version: [18.x]
