--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build-test:
+    if: github.event.pull_request.draft == false
     runs-on: neodash-runners
     strategy:
       matrix:
