Clean up and organized files in monorepo structure

--- a/apps/neodash-editor/Dockerfile
+++ b/apps/neodash-editor/Dockerfile
@@ -13,7 +13,7 @@ COPY apps/neodash-editor/package.json /usr/local/src/neodash/package.json
 
 RUN yarn install
 COPY apps/neodash-editor /usr/local/src/neodash
-RUN yarn run build-minimal
+RUN yarn run build-minimal:editor
 
 # production stage
 FROM nginx:alpine AS neodash
