Copying cypress file

--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -28,15 +28,15 @@ jobs:
       - run: yarn install
       - name: Eslint check
         run: yarn lint:all
-      - name: Move cypress config to root folder for execution
-        run: mv apps/neodash-editor/cypress . 
+      - name: Copy cypress config to root folder for execution
+        run: cp apps/neodash-editor/cypress .
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
           config-file: apps/neodash-editor/cypress-config.ts
           build: yarn build:editor
           start: yarn start:editor
-          wait-on: 'http://localhost:3000'
+          wait-on: "http://localhost:3000"
           browser: chrome
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
