--- a/apps/neodash-editor/package.json
+++ b/apps/neodash-editor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "neodash-editor",
-  "version": "2.2.3",
+  "name": "neodash",
+  "version": "2.3.4",
   "description": "NeoDash - Neo4j Dashboard Builder",
   "neo4jDesktop": {
     "apiVersion": "^1.2.0"
@@ -28,7 +28,6 @@
     "format": "prettier --write \"**/*.{ts,tsx}\"",
     "lint": "eslint --ext .ts --ext .tsx .",
     "lint-staged": "lint-staged --config ../../.lintstagedrc.json",
-    "old-prepare": "husky install",
     "test": "yarn cypress open",
     "test-headless": "yarn cypress run"
   },
@@ -37,29 +36,28 @@
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.2",
     "@codemirror/lang-markdown": "^6.1.1",
-    "@codemirror/language-data": "^6.3.1",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
-    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@mui/styles": "^5.12.3",
     "@mui/x-data-grid": "5.17.26",
     "@mui/x-date-pickers": "^5.0.17",
-    "@neo4j-cypher/react-codemirror": "^1.0.2",
-    "@neo4j-ndl/base": "1.7.0",
-    "@neo4j-ndl/react": "1.7.0",
-    "@nivo/bar": "^0.82.1",
-    "@nivo/circle-packing": "^0.82.1",
-    "@nivo/core": "^0.82.1",
-    "@nivo/geo": "^0.82.1",
-    "@nivo/line": "^0.82.1",
-    "@nivo/pie": "^0.82.1",
-    "@nivo/radar": "^0.82.1",
-    "@nivo/sankey": "^0.82.1",
+    "@neo4j-cypher/react-codemirror": "^1.0.3",
+    "@neo4j-ndl/base": "1.10.1",
+    "@neo4j-ndl/react": "1.10.2",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/circle-packing": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/geo": "^0.83.0",
+    "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
+    "@nivo/radar": "^0.83.0",
+    "@nivo/sankey": "^0.83.0",
     "@nivo/scatterplot": "^0.83.0",
-    "@nivo/sunburst": "^0.82.1",
-    "@nivo/treemap": "^0.82.1",
+    "@nivo/sunburst": "^0.83.0",
+    "@nivo/treemap": "^0.83.0",
     "@sentry/react": "^7.57.0",
+    "@sentry/webpack-plugin": "^2.5.0",
     "babel-runtime": "^6.26.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
@@ -87,10 +85,10 @@
     "react-leaflet-cluster": "^1.0.4",
     "react-leaflet-enhanced-marker": "^1.0.21",
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
-    "react-toggle-dark-mode": "^1.1.1",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
     "react-show-more-text": "^1.6.2",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-use-error-boundary": "^3.0.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
@@ -107,14 +105,16 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "babel-plugin-istanbul": "^6.1.1",
     "@babel/register": "^7.16.9",
+    "@cypress/code-coverage": "^3.10.8",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@redux-devtools/extension": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-istanbul": "^6.1.1",
     "css-loader": "^3.6.0",
     "cypress": "^10.11.0",
     "eslint": "^8.26.0",
@@ -127,7 +127,6 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "serverless-finch": "^4.0.0",
     "source-map-loader": "^4.0.0",
     "style-loader": "^1.1.3",
@@ -136,6 +135,6 @@
     "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
-    "@cypress/code-coverage": "^3.10.8"
+    "circular-dependency-plugin": "^5.2.2"
   }
 }
