--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "lint:all": "turbo run lint",
     "lint-staged:all": "turbo run lint-staged",
     "start:all": "turbo run start",
-    "start:editor": "turbo run start --scope neodash-editor",
+    "start:editor": "turbo run start --scope neodash",
     "start:docs": "turbo run start --scope docs",
     "start:gallery": "turbo run start --scope neodash-gallery",
-    "build:editor": "turbo run build --scope neodash-editor",
+    "build:editor": "turbo run build --scope neodash",
     "build:docs": "turbo run build --scope docs",
     "build:gallery": "turbo run build --scope neodash-gallery",
-    "build-minimal:editor": "turbo run build --scope neodash-editor",
-    "test:editor": "turbo run test --scope neodash-editor",
-    "test-headless:editor": "turbo run test-headless --scope neodash-editor"
+    "build-minimal:editor": "turbo run build --scope neodash",
+    "test:editor": "turbo run test --scope neodash",
+    "test-headless:editor": "turbo run test-headless --scope neodash"
   }
 }
