Fixing test scripts

--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -27,7 +27,9 @@ jobs:
       - run: yarn global add turbo
       - run: yarn install
       - name: Eslint check
-        run: turbo run lint
+        run: yarn lint:all
+      - name: Copy cypress config to root folder for execution
+        run: cp -r apps/neodash-editor/cypress .
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
