standalone load v1 (working)

--- a/public/config.json
+++ b/public/config.json
@@ -1,12 +1,13 @@
 {
   "ssoEnabled": false,
   "ssoDiscoveryUrl": "https://example.com",
-  "standalone": false,
+  "standalone": true,
   "standaloneProtocol": "neo4j",
   "standaloneHost": "localhost",
   "standalonePort": "7687",
-  "standaloneDatabase": "neo4j",
+  "standaloneDatabase": "movies",
   "standaloneDashboardName": "My Dashboard",
   "standaloneDashboardDatabase": "dashboards",
-  "standaloneDashboardURL": ""
+  "standaloneDashboardURL": "",
+  "standaloneAllowLoad": true
 }
