--- a/apps/neodash-editor/package.json
+++ b/apps/neodash-editor/package.json
@@ -33,7 +33,48 @@
   "keywords": [],
   "author": "Neo4j Labs",
   "dependencies": {
-    "@neodash/engine": "^2.3.4"
+    "@neodash/engine": "^2.3.4",
+    "@neo4j-ndl/base": "1.10.1",
+    "@neo4j-ndl/react": "1.10.2",
+    "@sentry/react": "^7.57.0",
+    "@sentry/webpack-plugin": "^2.5.0",
+    "babel-runtime": "^6.26.0",
+    "chroma-js": "^2.4.2",
+    "classnames": "^2.3.1",
+    "d3-scale-chromatic": "^3.0.0",
+    "dayjs": "^1.11.7",
+    "dom-to-image": "^2.6.0",
+    "leaflet": "^1.7.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "mui-color": "^2.0.0-beta.2",
+    "mui-nested-menu": "^3.2.1",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.2.4",
+    "postcss-preset-env": "^8.3.0",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-cool-dimensions": "^2.0.7",
+    "react-dom": "^17.0.2",
+    "react-force-graph-2d": "^1.23.8",
+    "react-gauge-chart": "^0.4.1",
+    "react-grid-layout": "^1.3.4",
+    "react-leaflet": "^3.2.5",
+    "react-leaflet-cluster": "^1.0.4",
+    "react-leaflet-enhanced-marker": "^1.0.21",
+    "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
+    "react-markdown": "^8.0.0",
+    "react-redux": "^7.2.6",
+    "react-show-more-text": "^1.6.2",
+    "react-toggle-dark-mode": "^1.1.1",
+    "react-use-error-boundary": "^3.0.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "remark-gfm": "^3.0.1",
+    "reselect": "^4.1.8",
+    "tailwindcss": "^3.3.2",
+    "use-neo4j": "^0.3.13",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
