--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:all": "turbo run lint",
     "lint-staged:all": "turbo run lint-staged",
     "start:all": "turbo run start",
-    "start:editor": "turbo run start --scope neodash",
+    "start:editor": "turbo run build --scope neodash-engine && turbo run start --scope neodash",
     "start:docs": "turbo run start --scope docs",
     "start:gallery": "turbo run start --scope neodash-gallery",
     "build:editor": "turbo run build --scope neodash",
