--- a/packages/neodash-engine/package.json
+++ b/packages/neodash-engine/package.json
@@ -14,17 +14,19 @@
   },
   "license": "Apache-2.0",
   "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./application": "./dist/application/Application.js",
+    "./style": "./dist/config/StyleConfig.js",
+    "./reducers/application": "./dist/application/ApplicationReducer.js",
+    "./reducers/dashboard": "./dist/dashboard/DashboardReducer.js",
+    "./reducers/session": "./dist/sessionStorage/SessionStorageReducer.js"
+  },
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "yarn webpack-dev-server --mode development",
-    "debug": "yarn --node-options='--inspect' webpack-dev-server --mode development",
-    "build": "yarn webpack --mode production --env production && cp -r public/* dist/",
-    "build-minimal": "yarn webpack --mode production --env production && cp -r public/* dist/",
-    "format": "prettier --write \"**/*.{ts,tsx}\"",
-    "lint": "eslint --ext .ts --ext .tsx .",
-    "lint-staged": "lint-staged --config ../../.lintstagedrc.json",
-    "test": "yarn cypress open",
-    "test-headless": "yarn cypress run"
+    "build": "tsc --outDir dist",
+    "clean:build": "rimraf ./dist",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "Neo4j Labs",
