--- a/packages/neodash-engine/tsconfig.json
+++ b/packages/neodash-engine/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "extends": "../../tsconfig.json",
+  "include": ["src/**/*"],
   "compilerOptions": {
     "target": "ES2022",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -12,10 +14,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react",
     "noImplicitAny": false,
     "useDefineForClassFields": false,
     "noFallthroughCasesInSwitch": true,
-  },
+    "outDir": "test"
+  
+  }
 }
