--- a/public/config.json
+++ b/public/config.json
@@ -3,9 +3,9 @@
   "ssoDiscoveryUrl": "https://example.com",
   "standalone": false,
   "standaloneProtocol": "neo4j",
-  "standaloneHost": "192.168.0.100",
+  "standaloneHost": "localhost",
   "standalonePort": "7687",
-  "standaloneDatabase": "movies",
+  "standaloneDatabase": "neo4j",
   "standaloneDashboardName": "My Dashboard",
   "standaloneDashboardDatabase": "dashboards",
   "standaloneDashboardURL": "",
