--- a/public/config.json
+++ b/public/config.json
@@ -1,6 +1,6 @@
 {
-  "ssoEnabled": true,
-  "ssoDiscoveryUrl": "http://localhost:7687",
+  "ssoEnabled": false,
+  "ssoDiscoveryUrl": "https://example.com",
   "standalone": false,
   "standaloneProtocol": "neo4j",
   "standaloneHost": "localhost",
