Adding a flag to control the error popup

--- a/public/config.json
+++ b/public/config.json
@@ -8,5 +8,6 @@
   "standaloneDatabase": "neo4j",
   "standaloneDashboardName": "My Dashboard",
   "standaloneDashboardDatabase": "dashboards",
-  "standaloneDashboardURL": ""
+  "standaloneDashboardURL": "",
+  "skipAddDashErrorPopup": true
 }
