--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "start:editor": "turbo run start --scope neodash",
     "start:docs": "turbo run start --scope docs",
     "start:gallery": "turbo run start --scope neodash-gallery",
-    "build:editor": "turbo run build --scope @neodash/engine && turbo run build --scope neodash",
+    "build:editor": "turbo run build --scope neodash",
     "build:docs": "turbo run build --scope docs",
     "build:gallery": "turbo run build --scope neodash-gallery",
-    "build-minimal:editor": "turbo run build --scope @neodash/engine && turbo run build --scope neodash",
+    "build-minimal:editor": "turbo run build --scope neodash",
     "test:editor": "turbo run test --scope neodash",
     "test-headless:editor": "turbo run test-headless --scope neodash"
   },
