--- a/packages/neodash-engine/package.json
+++ b/packages/neodash-engine/package.json
@@ -13,11 +13,29 @@
     "access": "public"
   },
   "license": "Apache-2.0",
-  "entry": "./src/index.tsx",
-  "main": "./src/index.tsx",
+  "main": "./lib/index.js",
+  "module": "./es/index.js",
+  "exports": {
+    ".": {
+      "import": "./es/index.js",
+      "require": "./lib/index.js"
+    },
+    "./src/index.tsx": {
+      "import": "./src/index.tsx",
+      "require": "./lib/index.js"
+    }
+  },
+  "files": [
+    "src/",
+    "es/",
+    "lib/",
+    "README.md"
+  ],
   "scripts": {
-    "build": "webpack",
-    "clean:build": "rimraf ./dist"
+    "build-lib": "babel --config-file ../../babel.config.js --extensions \".tsx,.ts\" --out-dir lib ./src",
+    "build-es": "cross-env ES=true babel --config-file ../../babel.config.js --extensions \".tsx,.ts\" --out-dir es ./src",
+    "build": "yarn run build-lib && yarn run build-es",
+    "clean:build": "rimraf lib && rimraf es"
   },
   "keywords": [],
   "author": "Neo4j Labs",
@@ -90,6 +108,7 @@
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.12",
     "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/plugin-transform-modules-commonjs": "^7.16",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -103,6 +122,7 @@
     "@typescript-eslint/parser": "^5.42.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-istanbul": "^6.1.1",
+    "circular-dependency-plugin": "^5.2.2",
     "css-loader": "^3.6.0",
     "cypress": "^10.11.0",
     "eslint": "^8.26.0",
@@ -122,7 +142,6 @@
     "typescript": "^4.8.4",
     "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "circular-dependency-plugin": "^5.2.2"
+    "webpack-dev-server": "^4.7.3"
   }
 }
