--- a/docs/package.json
+++ b/docs/package.json
@@ -4,26 +4,28 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "npm run dev",
-      "dev": "node server.js & npm-watch preview",
-      "preview": "antora preview.yml",
-      "publish": "git push origin HEAD:publish"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "npm run dev",
+        "dev": "node server.js & npm-watch preview",
+        "preview": "antora preview.yml",
+        "publish": "git push origin HEAD:publish"
     },
     "watch": {
-      "preview": {
-        "patterns": [
-          "modules"
-        ],
-        "extensions": "adoc"
-      }
+        "preview": {
+            "patterns": [
+                "modules"
+            ],
+            "extensions": "adoc"
+        }
     },
     "dependencies": {
-      "@antora/cli": "^3.1.1",
-      "@antora/site-generator-default": "^3.1.1",
-      "@neo4j-documentation/macros": "^1.0.0",
-      "@neo4j-documentation/remote-include": "^1.0.0",
-      "express": "^4.17.1",
-      "npm-watch": "^0.11.0"
+        "@antora/cli": "^3.1.1",
+        "@antora/site-generator-default": "^3.1.1",
+        "@neo4j-documentation/macros": "^1.0.0",
+        "@neo4j-documentation/remote-include": "^1.0.0",
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "npm-watch": "^0.11.0"
     }
-  }
+}
