--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.4",
     "@codemirror/lang-markdown": "^6.1.1",
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@mui/icons-material": "^5.11.16",
+    "@codemirror/language-data": "^6.3.1",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.12.3",
     "@mui/styles": "^5.12.3",
     "@mui/x-data-grid": "5.17.26",
