--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@nivo/sunburst": "^0.83.0",
     "@nivo/treemap": "^0.83.0",
     "@sentry/react": "^7.57.0",
-    "@sentry/webpack-plugin": "^2.7.0",
+    "@sentry/webpack-plugin": "^2.7.1",
+    "@tailwindcss/forms": "^0.5.6",
     "babel-runtime": "^6.26.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
