added configuration to allow multiple data DBs

--- a/public/config.json
+++ b/public/config.json
@@ -10,5 +10,8 @@
   "standaloneDashboardDatabase": "dashboards",
   "standaloneDashboardURL": "",
   "standaloneAllowLoad": false,
-  "standaloneLoadFromOtherDatabases": false
+  "standaloneLoadFromOtherDatabases": false,
+  "standaloneMultiDatabase": false,
+  "standaloneDatabaseList": "neo4j"
+
 }
