--- a/apps/neodash-gallery/package.json
+++ b/apps/neodash-gallery/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@neo4j-ndl/base": "^0.8.3",
-    "@neo4j-ndl/react": "^0.8.3",
+    "@neo4j-ndl/base": "1.10.3",
+    "@neo4j-ndl/react": "1.10.7",
     "@types/react-dom": "^17.0.2",
     "neo4j-driver": "^5.0.1",
     "postcss-loader": "^7.2.4",
