--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@nivo/treemap": "^0.83.0",
     "@sentry/react": "^7.57.0",
     "@sentry/webpack-plugin": "^2.7.1",
-    "@tailwindcss/forms": "^0.5.6",
+    "@tanstack/react-table": "^8.10.0",
     "babel-runtime": "^6.26.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
