--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -31,7 +31,7 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           build: yarn run build
-          start: yarn run prod
+          start: yarn run dev
           wait-on: 'http://localhost:3000'
           browser: chrome
       - name: Upload coverage reports to Codecov
