--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -31,7 +31,7 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           build: yarn run build
-          start: yarn run dev
+          start: yarn run prod
           wait-on: "http://localhost:3000"
           browser: chrome
   build-s3:
