--- a/package.json
+++ b/package.json
@@ -57,20 +57,24 @@
     "@nivo/treemap": "^0.80.0",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.3.1",
+    "crypto-browserify": "^3.12.0",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.7",
     "dom-to-image": "^2.6.0",
     "fs": "^0.0.1-security",
+    "https-browserify": "^1.0.0",
     "kafkajs": "^2.2.4",
     "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
+    "minio": "^7.1.3",
     "mqtt": "^4.3.7",
     "mqtt-connection": "^4.1.0",
     "mui-nested-menu": "^3.2.0",
     "neo4j-client-sso": "^1.2.2",
     "openai": "^3.2.1",
+    "path-browserify": "^1.0.1",
     "precompiled-mqtt": "^4.3.14-beta",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
@@ -91,6 +95,8 @@
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
     "stream": "^0.0.2",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
     "ts-node": "^10.9.1",
     "url": "^0.11.0",
     "use-neo4j": "^0.3.13",
