fix dirt in config.json

--- a/public/config.json
+++ b/public/config.json
@@ -15,5 +15,5 @@
   "standaloneDatabaseList": "neo4j",
   "loggingMode": "0",
   "loggingDatabase": "logs",
-  "customHeader": "B-Raven.com"
+  "customHeader": ""
 }
