Legend on bottom, working on scrolling

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@sentry/react": "^7.57.0",
     "@sentry/webpack-plugin": "^2.5.0",
     "babel-runtime": "^6.26.0",
+    "caniuse-lite": "^1.0.30001546",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^3.0.0",
@@ -117,6 +118,7 @@
     "@typescript-eslint/parser": "^5.42.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-istanbul": "^6.1.1",
+    "circular-dependency-plugin": "^5.2.2",
     "css-loader": "^3.6.0",
     "cypress": "^12.17.4",
     "eslint": "^8.26.0",
@@ -136,7 +138,6 @@
     "typescript": "^4.8.4",
     "webpack": "^5.77.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "circular-dependency-plugin": "^5.2.2"
+    "webpack-dev-server": "^4.7.3"
   }
 }
