--- a/public/config.json
+++ b/public/config.json
@@ -2,18 +2,18 @@
   "ssoEnabled": false,
   "ssoDiscoveryUrl": "https://example.com",
   "standalone": false,
-  "standaloneProtocol": "neo4j",
+  "standaloneProtocol": "bolt",
   "standaloneHost": "localhost",
-  "standalonePort": "7687",
+  "standalonePort": "11003",
   "standaloneDatabase": "neo4j",
   "standaloneDashboardName": "My Dashboard",
-  "standaloneDashboardDatabase": "dashboards",
+  "standaloneDashboardDatabase": "neo4j",
   "standaloneDashboardURL": "",
-  "standaloneAllowLoad": false,
+  "standaloneAllowLoad": true,
   "standaloneLoadFromOtherDatabases": false,
-  "standaloneMultiDatabase": false,
+  "standaloneMultiDatabase": true,
   "standaloneDatabaseList": "neo4j",
-  "loggingMode": "0",
+  "loggingMode": "1",
   "loggingDatabase": "logs",
-  "customHeader": ""
+  "customHeader": "Test"
 }
