--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "useDefineForClassFields": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src"],
 }
