fixing new selector and small refactorings

--- a/public/config.json
+++ b/public/config.json
@@ -2,18 +2,18 @@
   "ssoEnabled": false,
   "ssoDiscoveryUrl": "https://example.com",
   "standalone": false,
-  "standaloneProtocol": "bolt",
+  "standaloneProtocol": "neo4j",
   "standaloneHost": "localhost",
-  "standalonePort": "11003",
+  "standalonePort": "7687",
   "standaloneDatabase": "neo4j",
   "standaloneDashboardName": "My Dashboard",
-  "standaloneDashboardDatabase": "neo4j",
+  "standaloneDashboardDatabase": "dashboards",
   "standaloneDashboardURL": "",
-  "standaloneAllowLoad": true,
+  "standaloneAllowLoad": false,
   "standaloneLoadFromOtherDatabases": false,
-  "standaloneMultiDatabase": true,
+  "standaloneMultiDatabase": false,
   "standaloneDatabaseList": "neo4j",
-  "loggingMode": "1",
+  "loggingMode": "0",
   "loggingDatabase": "logs",
-  "customHeader": "Test"
+  "customHeader": ""
 }
