--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
     "react-force-graph-2d": "^1.23.8",
+    "react-force-graph-3d": "^1.24.1",
     "react-gauge-chart": "^0.4.1",
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
@@ -97,6 +98,8 @@
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.8",
     "tailwindcss": "^3.3.2",
+    "three": "^0.159.0",
+    "three-spritetext": "^1.8.1",
     "use-neo4j": "^0.3.13",
     "yaml": "^2.2.1"
   },
