Statistics module works, including showing results in Neodash

--- a/connection/minio_config.ini
+++ b/connection/minio_config.ini
@@ -1,7 +1,7 @@
 [minio]
 endpoint = localhost:9000
-access_key = 
-secret_key = 
+access_key = sindit_minio
+secret_key = sindit_minio
 session_token =
 secure = False
 region =
