Add timing of statistics

--- a/statistics/minio_config.ini
+++ b/statistics/minio_config.ini
@@ -1,7 +1,7 @@
 [minio]
 endpoint = 172.18.0.1:9000
-access_key =
-secret_key =
+access_key = sindit_minio
+secret_key = sindit_minio
 session_token =
 secure = False
 region =
